; ModuleID = '/home/carl/AnghaBench/tmux/extr_menu.c_menu_add_items.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_menu.c_menu_add_items.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.menu = type { i32 }
%struct.menu_item = type { i32* }
%struct.cmdq_item = type { i32 }
%struct.client = type { i32 }
%struct.cmd_find_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @menu_add_items(%struct.menu* %0, %struct.menu_item* %1, %struct.cmdq_item* %2, %struct.client* %3, %struct.cmd_find_state* %4) #0 {
  %6 = alloca %struct.menu*, align 8
  %7 = alloca %struct.menu_item*, align 8
  %8 = alloca %struct.cmdq_item*, align 8
  %9 = alloca %struct.client*, align 8
  %10 = alloca %struct.cmd_find_state*, align 8
  %11 = alloca %struct.menu_item*, align 8
  store %struct.menu* %0, %struct.menu** %6, align 8
  store %struct.menu_item* %1, %struct.menu_item** %7, align 8
  store %struct.cmdq_item* %2, %struct.cmdq_item** %8, align 8
  store %struct.client* %3, %struct.client** %9, align 8
  store %struct.cmd_find_state* %4, %struct.cmd_find_state** %10, align 8
  %12 = load %struct.menu_item*, %struct.menu_item** %7, align 8
  store %struct.menu_item* %12, %struct.menu_item** %11, align 8
  br label %13

13:                                               ; preds = %25, %5
  %14 = load %struct.menu_item*, %struct.menu_item** %11, align 8
  %15 = getelementptr inbounds %struct.menu_item, %struct.menu_item* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %13
  %19 = load %struct.menu*, %struct.menu** %6, align 8
  %20 = load %struct.menu_item*, %struct.menu_item** %11, align 8
  %21 = load %struct.cmdq_item*, %struct.cmdq_item** %8, align 8
  %22 = load %struct.client*, %struct.client** %9, align 8
  %23 = load %struct.cmd_find_state*, %struct.cmd_find_state** %10, align 8
  %24 = call i32 @menu_add_item(%struct.menu* %19, %struct.menu_item* %20, %struct.cmdq_item* %21, %struct.client* %22, %struct.cmd_find_state* %23)
  br label %25

25:                                               ; preds = %18
  %26 = load %struct.menu_item*, %struct.menu_item** %11, align 8
  %27 = getelementptr inbounds %struct.menu_item, %struct.menu_item* %26, i32 1
  store %struct.menu_item* %27, %struct.menu_item** %11, align 8
  br label %13

28:                                               ; preds = %13
  ret void
}

declare dso_local i32 @menu_add_item(%struct.menu*, %struct.menu_item*, %struct.cmdq_item*, %struct.client*, %struct.cmd_find_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
